# interpop

./: .commitlintrc.json  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt  seed_users.py
backend/apps/articles/: admin.py  apps.py  converters.py  models.py  og_middleware.py  robots_view.py  serializers.py  signals.py  sitemaps.py  urls.py  views.py
backend/apps/articles/tests/: test_admin.py  test_views.py
backend/apps/audit/: health_view.py  middleware.py  sentry.py  utils.py  views.py
backend/apps/audit/tests/: test_admin_metrics.py  test_health.py  test_sentry.py
backend/apps/comments/: serializers.py  urls.py  views.py
backend/apps/comments/tests/: conftest.py  test_views.py
backend/apps/moderation/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
backend/apps/moderation/migrations/: 0003_banrequest.py
backend/apps/moderation/tests/: test_ban_hierarchy.py  test_serializers.py  test_services.py  test_tasks.py
backend/apps/newsletter/: admin.py  services.py  tasks.py  views.py
backend/apps/newsletter/tests/: test_services.py  test_views.py
backend/apps/search/: README.md  __init__.py  apps.py  cache.py  cursors.py  dto.py  models.py  serializers.py  services.py  signals.py  throttles.py  urls.py  utils.py  views.py
backend/apps/search/migrations/: 0001_initial.py  0002_search_indexes.py  0003_search_triggers.py  0004_search_vacuum_tuning.py  0005_trigger_enable_always.py
backend/apps/search/tests/: test_app_config.py  test_cache.py  test_cursors.py  test_dto.py  test_migrations_0001.py  test_migrations_0002.py  test_migrations_0003.py  test_migrations_0004.py  test_migrations_0005.py  test_service.py  test_settings.py  test_settings_production.py  test_signals.py  test_statement_timeout_tx.py  (+3 more)
backend/apps/users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  validators.py  views.py
backend/config/: __init__.py  celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
(+287 files in other folders)
