[project]
name = "interpop-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "celery[redis]>=5.6.3",
    "django==5.1.4",
    "django-axes==7.0.1",
    "django-celery-beat>=2.9.0",
    "django-cors-headers==4.6.0",
    "django-filter==24.3",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "gunicorn==23.0.0",
    "pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "python-json-logger>=4.1.0",
    "python-slugify==8.0.4",
    "sentry-sdk>=2.60.0",
    "whitenoise==6.8.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
]
