[project]
name = "interpop-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi==23.1.0",
    "celery[redis]>=5.6.3",
    "django==5.1.15",
    "django-axes==8.3.1",
    "django-celery-beat>=2.9.0",
    "django-cors-headers==4.9.0",
    "django-filter==24.3",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn==23.0.0",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "python-decouple==3.8",
    "python-json-logger>=4.1.0",
    "python-slugify==8.0.4",
    "sentry-sdk>=2.60.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.1",
]
